--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:ci": "npm run coverage -- --ci --maxWorkers=2  --reporters=default --reporters=jest-junit",
     "coverage:upload": "codecov",
     "prepublishOnly": "npm run build",
-    "gen-doc": "typedoc ./src/index.ts --exclude ./src/__tests__ --out typeDocs --tsconfig tsconfig.json",
+    "typedoc": "typedoc ./src/index.ts --out docs --tsconfig tsconfig.json",
     "benchmark": "jest --testMatch=\"**/__tests__/benchmark/benchmark.test.ts\" --testTimeout 10000"
   },
   "devDependencies": {
@@ -39,6 +39,7 @@
     "reflect-metadata": "^0.2.2",
     "source-map-support": "^0.5.13",
     "ts-jest": "^29.0.0",
+    "typedoc": "^0.26.7",
     "typescript": "^5.6.2"
   },
   "typings": "dist/index.d.ts",
