--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:ci": "npm run coverage -- --ci --maxWorkers=2  --reporters=default --reporters=jest-junit",
     "coverage:upload": "codecov",
     "prepublishOnly": "npm run build",
-    "typedoc": "typedoc ./src/index.ts --out docs --tsconfig tsconfig.json",
+    "typedoc": "typedoc",
     "benchmark": "jest --testMatch=\"**/__tests__/benchmark/benchmark.test.ts\" --testTimeout 10000"
   },
   "devDependencies": {
