--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "pretest": "npm run build",
-    "test": "jest --verbose dist/__tests__/index.js",
-    "test:dev": "jest --verbose src/__tests__/index.ts --watch",
-    "coverage": "jest --verbose src/__tests__/index.ts --coverage",
+    "test": "jest --verbose --runInBand",
+    "test:dev": "jest --verbose --watch",
+    "coverage": "jest --verbose --coverage",
     "test:clean": "jest --clearCache",
     "testonly": "npm test",
     "test:ci": "npm run coverage -- --ci --maxWorkers=2  --reporters=default --reporters=jest-junit",
@@ -46,5 +45,8 @@
   "typescript": {
     "definition": "dist/index.d.ts"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "lru-cache": "^11.1.0"
+  }
 }
