--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/benchmark": "^2.1.5",
+    "@types/express": "^5.0.3",
     "@types/graphql": "^0.11.3",
     "@types/jest": "^27.0.0",
     "@types/node": "^20.0.0",
@@ -31,6 +32,7 @@
     "eslint": "^6.6.0",
     "eslint-config-prettier": "6.3.0",
     "eslint-plugin-prettier": "3.1.1",
+    "express": "^5.1.0",
     "jest": "^29.0.0",
     "jest-junit": "^10.0.0",
     "prettier": "^2.0.5",
