--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": ["esnext"],
     "moduleResolution": "node",
     "sourceMap": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "rootDir": "./src",
     "outDir": "./dist",
     "allowSyntheticDefaultImports": true,
