--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,19 +43,23 @@ jobs:
       - name: Run tests with coverage enforcement
         run: npm run test:ci
 
-      # Generate documentation
+      # Generate documentation (only on main branch)
       - name: Generate documentation
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: npm run typedoc
 
       - name: Setup Pages
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         uses: actions/configure-pages@v4
 
       - name: Upload artifact
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         uses: actions/upload-pages-artifact@v3
         with:
           path: "./docs"
 
       # Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         id: deployment
         uses: actions/deploy-pages@v4
