--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "test:ci": "jest --verbose --coverage --ci --maxWorkers=2 --reporters=default --reporters=jest-junit",
     "prepublishOnly": "npm run build",
     "typedoc": "typedoc --options typedoc.json",
-    "benchmark": "jest --testMatch=\"**/__tests__/benchmark/benchmark.test.ts\" --testTimeout 10000",
-    "benchmark:comprehensive": "jest --testMatch=\"**/__tests__/benchmark/comprehensive-benchmark.test.ts\" --testTimeout 30000"
+    "benchmark": "jest --config jest.bench.config.js --verbose"
   },
   "devDependencies": {
     "@types/benchmark": "^2.1.5",
