--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "ts-jest": "^29.0.0",
     "typedoc": "^0.26.7",
     "typedoc-material-theme": "^1.1.0",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "zod": "^4.0.17"
   },
   "typings": "dist/index.d.ts",
   "typescript": {
