--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ts-jest": "^29.0.0",
     "typedoc": "^0.26.7",
     "typedoc-material-theme": "^1.1.0",
+    "typedoc-plugin-pages": "^1.1.0",
     "typescript": "^5.6.2",
     "zod": "^4.0.17"
   },
