--- a/examples/express-openapi-sqlite/package.json
+++ b/examples/express-openapi-sqlite/package.json
@@ -8,7 +8,8 @@
     "dev": "ts-node-dev --respawn src/index.ts",
     "build": "tsc",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "mcp": "runner-dev mcp"
   },
   "dependencies": {
     "@bluelibs/runner": "file:../..",
@@ -25,6 +26,7 @@
     "zod-openapi": "^5.3.1"
   },
   "devDependencies": {
+    "@bluelibs/runner-dev": "file:../../../runner-dev",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
