--- a/examples/express-openapi-sqlite/package.json
+++ b/examples/express-openapi-sqlite/package.json
@@ -44,6 +44,7 @@
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "why-is-node-running": "^3.2.2"
   }
 }
