--- a/examples/express-openapi-sqlite/package.json
+++ b/examples/express-openapi-sqlite/package.json
@@ -12,10 +12,11 @@
     "mcp": "runner-dev mcp"
   },
   "dependencies": {
-    "@bluelibs/runner": "^4.1.0",
+    "@bluelibs/runner": "^4.1.1",
     "@bluelibs/runner-dev": "^4.1.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dedupe": "^4.0.3",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
