--- a/examples/express-openapi-sqlite/package.json
+++ b/examples/express-openapi-sqlite/package.json
@@ -12,7 +12,7 @@
     "mcp": "runner-dev mcp"
   },
   "dependencies": {
-    "@bluelibs/runner": "file:../..",
+    "@bluelibs/runner": "^4.3.0",
     "@bluelibs/runner-dev": "^4.1.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
