--- a/examples/express-openapi-sqlite/package.json
+++ b/examples/express-openapi-sqlite/package.json
@@ -5,15 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "dev": "ts-node-dev --respawn src/index.ts",
+    "dev": "NODE_ENV='development' ts-node-dev --respawn src/index.ts",
     "build": "tsc",
-    "test": "jest",
+    "test": "PORT=3788 jest",
     "test:watch": "jest --watch",
     "mcp": "runner-dev mcp"
   },
   "dependencies": {
     "@bluelibs/runner": "^4.3.0",
-    "@bluelibs/runner-dev": "^4.1.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dedupe": "^4.0.3",
@@ -28,6 +27,7 @@
     "zod-openapi": "^5.3.1"
   },
   "devDependencies": {
+    "@bluelibs/runner-dev": "^4.1.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
