--- a/package.json
+++ b/package.json
@@ -1,8 +1,24 @@
 {
   "name": "@bluelibs/runner",
-  "version": "4.4.1",
+  "version": "4.5.0-alpha",
   "description": "BlueLibs Runner",
   "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "node": "./dist/index.js",
+      "browser": "./dist/index.js",
+      "default": "./dist/index.js"
+    },
+    "./platform": {
+      "types": "./dist/platform/index.d.ts",
+      "node": "./dist/platform/node.js",
+      "browser": "./dist/platform/browser.js",
+      "default": "./dist/platform/index.js"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/bluelibs/bluelibs"
