--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
   "name": "@bluelibs/runner",
-  "version": "4.5.0-alpha",
+  "version": "4.5.0",
   "description": "BlueLibs Runner",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
+  "sideEffects": false,
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "node": "./dist/index.js",
-      "browser": "./dist/index.js",
-      "default": "./dist/index.js"
-    },
-    "./platform": {
-      "types": "./dist/platform/index.d.ts",
-      "node": "./dist/platform/node.js",
-      "browser": "./dist/platform/browser.js",
-      "default": "./dist/platform/index.js"
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs",
+      "default": "./dist/index.mjs"
     }
   },
   "repository": {
@@ -24,9 +19,9 @@
     "url": "https://github.com/bluelibs/bluelibs"
   },
   "scripts": {
-    "build": "tsc --project tsconfig.build.json",
+    "build": "tsup --config tsup.config.ts --sourcemap",
     "clean": "rm -rf dist",
-    "watch": "tsc -w",
+    "watch": "tsup --config tsup.config.ts --watch",
     "test": "jest --verbose --runInBand",
     "test:dev": "jest --verbose --watch",
     "coverage": "jest --verbose --coverage",
@@ -54,12 +49,14 @@
     "eslint-plugin-prettier": "3.1.1",
     "express": "^5.1.0",
     "jest": "^29.0.0",
+    "jest-environment-jsdom": "^30.1.2",
     "jest-junit": "^10.0.0",
     "prettier": "^2.0.5",
     "reflect-metadata": "^0.2.2",
     "source-map-support": "^0.5.13",
     "tailwindcss": "^4.1.12",
     "ts-jest": "^29.0.0",
+    "tsup": "^8.0.0",
     "typedoc": "^0.26.7",
     "typedoc-material-theme": "^1.1.0",
     "typedoc-plugin-pages": "^1.1.0",
