--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,5 +1,22 @@
 {
-  "include": ["src/**/*.ts"],
-  "exclude": ["examples/**", "src/__tests__/**"],
-  "extends": "./tsconfig.json"
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "strict": true,
+    "skipLibCheck": true,
+    "declaration": true,
+    "emitDeclarationOnly": false,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "sourceMap": true,
+    "outDir": "dist",
+    "types": ["node"],
+    "baseUrl": ".",
+    "paths": {
+      "@bluelibs/runner/platform": ["src/platform/index.ts"]
+    }
+  },
+  "include": ["src"],
+  "exclude": ["examples/**", "src/__tests__/**"]
 }
