feat: de-nodify (#70)
* feat: web content improvements

* feat: multi-platform support

* refactor: Remove deprecated browser test and example files

* feat: Implement platform instance management for Node, Browser, and Universal adapters

* feat: update DocsPage description for context usage in Node only

feat: add PlatformsSection to HomePage for showcasing supported platforms

fix: update RunnerDevPage description for hot-swapping functionality

test: add comprehensive tests for platform/browser functionality

test: add extra coverage tests for platform features

test: enhance platform tests for various environments and edge cases

feat: implement PlatformsSection component for platform display on HomePage

* fix: update version to 4.5.0-alpha.3 and optimize platform initialization in run function

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "ES2020",
     "module": "commonjs",
-    "lib": ["esnext"],
+    "lib": ["ES2020", "DOM"],
     "moduleResolution": "node",
     "sourceMap": true,
     "noImplicitAny": true,
@@ -10,15 +10,13 @@
     "outDir": "./dist",
     "allowSyntheticDefaultImports": true,
     "pretty": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
     "declaration": true,
     "strict": true,
     "strictNullChecks": true,
-    "typeRoots": ["node_modules/@types"],
-    "noImplicitThis": false
+    "noImplicitThis": false,
+    "skipLibCheck": true
   },
 
   "include": ["src/**/*.ts"],
-  "exclude": ["examples/**"]
+  "exclude": ["examples/**", "web/**"]
 }
