--- a/examples/aws-lambda-quickstart/package.json
+++ b/examples/aws-lambda-quickstart/package.json
@@ -7,13 +7,18 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "start": "npm run build && node dist/local-runner.js",
-    "test": "npm run start"
+    "test": "npm run start",
+    "dev": "serverless --config serverless.yml offline start",
+    "dev:sam": "sam build && sam local start-api --port 3060"
   },
   "dependencies": {
-    "@bluelibs/runner": "^4.5.5",
+    "@bluelibs/runner": "^4.5.9",
+    "esbuild": "^0.25.9",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "serverless": "^4.18.2",
+    "serverless-offline": "^14.4.0",
     "typescript": "^5.9.2"
   }
 }
