feat: enhance Fastify MikroORM example with new features and improvements
- Added coverage testing command to package.json.
- Implemented database migration commands in package.json.
- Created error handling test for HTTPError and request ID propagation.
- Updated Fastify context to include request ID and user information.
- Enhanced Fastify router tests to include authorization middleware.
- Added health and readiness check endpoints with corresponding tests.
- Improved onReady hook to log Swagger UI availability.
- Registered health and readiness tasks in the Fastify HTTP module.
- Developed authorization middleware to enforce user roles.
- Refactored Fastify router to handle request IDs and logging.
- Integrated security features with helmet and CORS in Fastify setup.
- Created utility functions for building route schemas and task inputs.
- Added user authentication checks and improved user-related tasks.
- Updated user tasks to enforce authorization and return structured responses.

--- a/examples/fastify-mikroorm/.env.example
+++ b/examples/fastify-mikroorm/.env.example
@@ -1,11 +1,7 @@
-# Environment template for local development
-
-# Runtime environment: development | test | production
 NODE_ENV=development
-
-# HTTP server port
 PORT=3000
-
-# Database connection string for MikroORM (PostgreSQL)
+# Replace with your own strong secret in prod
+AUTH_SECRET=dev-secret-change-me
+# Update to your Postgres instance
 DATABASE_URL=postgres://myuser:mysecretpassword@localhost:5433/clearspec
 
