--- a/examples/fastify-mikroorm/tsconfig.json
+++ b/examples/fastify-mikroorm/tsconfig.json
@@ -10,6 +10,10 @@
     "declaration": true,
     "outDir": "dist",
     "rootDir": "src",
+    "baseUrl": "src",
+    "paths": {
+      "#/*": ["*"]
+    },
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "sourceMap": true,
