--- a/package.json
+++ b/package.json
@@ -14,9 +14,33 @@
       "default": "./dist/index.mjs"
     }
   },
+  "homepage": "https://runner.bluelibs.com",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bluelibs/bluelibs"
+    "url": "https://github.com/bluelibs/runner"
+  },
+  "bugs": {
+    "url": "https://github.com/bluelibs/runner/issues"
+  },
+  "funding": [
+    {
+      "type": "github",
+      "url": "https://github.com/sponsors/bluelibs"
+    }
+  ],
+  "keywords": [
+    "dependency-injection",
+    "framework",
+    "typescript",
+    "events",
+    "middleware",
+    "tasks",
+    "nodejs",
+    "serverless",
+    "architecture"
+  ],
+  "engines": {
+    "node": ">=18"
   },
   "scripts": {
     "build": "tsup --config tsup.config.ts --sourcemap",
