--- a/package.json
+++ b/package.json
@@ -3,16 +3,29 @@
   "version": "4.5.10",
   "description": "BlueLibs Runner",
   "sideEffects": false,
-  "main": "dist/index.cjs",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "main": "dist/universal/index.cjs",
+  "module": "dist/universal/index.mjs",
+  "types": "dist/index.d.mts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs",
-      "default": "./dist/index.mjs"
-    }
+      "browser": {
+        "import": "./dist/browser/index.mjs",
+        "default": "./dist/browser/index.mjs"
+      },
+      "node": {
+        "import": "./dist/node/index.mjs",
+        "require": "./dist/node/index.cjs"
+      },
+      "import": "./dist/universal/index.mjs",
+      "require": "./dist/universal/index.cjs",
+      "default": "./dist/universal/index.mjs"
+    },
+    "./edge": {
+      "import": "./dist/edge/index.mjs",
+      "default": "./dist/edge/index.mjs"
+    },
+    "./package.json": "./package.json"
   },
   "homepage": "https://runner.bluelibs.com",
   "repository": {
@@ -87,9 +100,9 @@
     "typescript": "^5.6.2",
     "zod": "^4.0.17"
   },
-  "typings": "dist/index.d.ts",
+  "typings": "dist/index.d.mts",
   "typescript": {
-    "definition": "dist/index.d.ts"
+    "definition": "dist/index.d.mts"
   },
   "files": [
     "dist",
