--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
       "types": "./dist/index.d.ts",
       "browser": {
         "import": "./dist/browser/index.mjs",
+        "require": "./dist/browser/index.cjs",
         "default": "./dist/browser/index.mjs"
       },
       "node": {
