feat: enhance benchmark configuration and CI integration
- Updated benchmark thresholds in `benchmarks.config.json` to improve performance tolerance.
- Added `ciThreshold` for CI environments and introduced `metricThresholds` for specific metrics.
- Enhanced GitHub Actions workflow to include environment variables for CI detection.
- Improved benchmark comparison script to provide detailed output and severity classification for regressions.
- Added a new script to update benchmark baselines easily.
- Introduced comprehensive documentation for the benchmark system in `BENCHMARKS.md` to guide users on running and comparing benchmarks.

--- a/.github/workflows/bench-regression.yml
+++ b/.github/workflows/bench-regression.yml
@@ -36,6 +36,8 @@ jobs:
         env:
           NODE_OPTIONS: --expose-gc
           BENCHMARK_OUTPUT: ${{ github.workspace }}/baseline.json
+          CI: true
+          GITHUB_ACTIONS: true
         run: npm run benchmark
 
       - name: Install deps (head)
@@ -47,6 +49,8 @@ jobs:
         env:
           NODE_OPTIONS: --expose-gc
           BENCHMARK_OUTPUT: ${{ github.workspace }}/benchmark-results.json
+          CI: true
+          GITHUB_ACTIONS: true
         run: npm run benchmark
 
       - name: Prepare comparison inputs
@@ -64,7 +68,17 @@ jobs:
 
       - name: Compare results
         working-directory: head
-        run: node ./scripts/compare-benchmarks.mjs ${{ github.workspace }}/baseline.json ${{ github.workspace }}/benchmark-results.json ${{ github.workspace }}/head/benchmarks.config.json
+        run: |
+          echo "Comparing benchmark results..."
+          echo "Baseline: ${{ github.workspace }}/baseline.json"
+          echo "Current: ${{ github.workspace }}/benchmark-results.json"
+          echo "Config: ${{ github.workspace }}/head/benchmarks.config.json"
+          
+          # Show file sizes for debugging
+          ls -la ${{ github.workspace }}/baseline.json ${{ github.workspace }}/benchmark-results.json
+          
+          # Run comparison
+          node ./scripts/compare-benchmarks.mjs ${{ github.workspace }}/baseline.json ${{ github.workspace }}/benchmark-results.json ${{ github.workspace }}/head/benchmarks.config.json
 
       - name: Upload artifacts
         if: always()
