chore: update TypeScript configuration and enhance benchmark comparison script
- Removed obsolete path mappings from `tsconfig.build.json` and streamlined `tsconfig.json` includes.
- Set the target to ES2022 in `tsup.config.ts` for improved compatibility.
- Enhanced the benchmark comparison script to handle format compatibility issues and provide clearer regression notes during transitions.

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -12,10 +12,7 @@
     "sourceMap": true,
     "outDir": "dist",
     "types": ["node"],
-    "baseUrl": ".",
-    "paths": {
-      "@bluelibs/runner/platform": ["src/platform/index.ts"]
-    }
+    "baseUrl": "."
   },
   "include": ["src"],
   "exclude": ["examples/**", "src/__tests__/**"]
