chore: update dependencies and improve configuration
- Bumped package version to 4.6.0-alpha.1 in package.json and package-lock.json.
- Added new dependencies for Fastify and multipart handling.
- Enhanced Jest configuration with module name mapping for cleaner imports.
- Updated TypeScript configuration to streamline build settings and improve path resolution.
- Refactored EventManager to simplify global listener exclusion logic.
- Improved platform detection logic to support build-time target definitions.
- Cleaned up test cases for better readability and maintainability.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,11 @@
     "strict": true,
     "strictNullChecks": true,
     "noImplicitThis": false,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "baseUrl": "./src",
+    "paths": {
+      "#/*": ["src/*"]
+    }
   },
 
   "include": ["src/**/*.ts"],
