--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bluelibs/runner",
-  "version": "4.6.0-alpha",
+  "version": "4.6.0-alpha.1",
   "description": "BlueLibs Runner",
   "sideEffects": false,
   "main": "dist/universal/index.cjs",
@@ -96,6 +96,7 @@
     "ts-jest": "^29.0.0",
     "tsup": "^8.0.0",
     "typedoc": "^0.26.7",
+    "@types/busboy": "^1.5.4",
     "typedoc-material-theme": "^1.1.0",
     "typedoc-plugin-pages": "^1.1.0",
     "typescript": "^5.6.2",
@@ -113,6 +114,11 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "lru-cache": "^11.1.0"
+  "lru-cache": "^11.1.0",
+  "fastify": "^5.1.0",
+  "@fastify/multipart": "^9.0.0"
+  },
+  "optionalDependencies": {
+    "busboy": "^1.6.0"
   }
 }
