feat: implement platform adapters for browser, edge, and node environments; enhance build configuration for universal, node, browser, and edge targets (#71)
* feat: implement platform adapters for browser, edge, and node environments; enhance build configuration for universal, node, browser, and edge targets

* feat: update general rules and improve target definitions in tsup.config.ts; remove obsolete release-please-config.json

* Add comprehensive tests for UniversalPlatformAdapter to achieve full coverage

- Introduced multiple test files to cover various scenarios for the UniversalPlatformAdapter.
- Implemented tests that manipulate globalThis to simulate different environments (browser, node, edge, universal).
- Added tests to verify the behavior of detectEnvironment under controlled conditions.
- Created tests for init() and lazy initialization via get() methods to ensure correct adapter instantiation.
- Included delegation tests to confirm that methods are correctly passed to the inner adapter.
- Utilized runtime hacks and prototype modifications to force specific code paths for testing.
- Ensured cleanup of global state after tests to maintain isolation.
- Updated the universal adapter implementation to include comments for unreachable code paths.

* feat(tests): Enhance universal platform adapter tests for better coverage and clarity

- Updated multiple test files to improve readability and maintainability.
- Refactored test cases to ensure they effectively cover edge cases and scenarios.
- Introduced detailed logging for debugging purposes during test execution.
- Improved the handling of global variables in tests to ensure isolation and prevent side effects.
- Added new tests to validate the behavior of the UniversalPlatformAdapter under various conditions.
- Cleaned up code formatting and ensured consistent use of async/await patterns.

docs: Add detailed execution plan for the Channel feature

- Outlined goals, core primitives, API architecture, and imp

--- a/package.json
+++ b/package.json
@@ -1,18 +1,32 @@
 {
   "name": "@bluelibs/runner",
-  "version": "4.5.10",
+  "version": "4.6.0-alpha.1",
   "description": "BlueLibs Runner",
   "sideEffects": false,
-  "main": "dist/index.cjs",
-  "module": "dist/index.mjs",
+  "main": "dist/universal/index.cjs",
+  "module": "dist/universal/index.mjs",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs",
-      "default": "./dist/index.mjs"
-    }
+      "browser": {
+        "import": "./dist/browser/index.mjs",
+        "require": "./dist/browser/index.cjs",
+        "default": "./dist/browser/index.mjs"
+      },
+      "node": {
+        "import": "./dist/node/index.mjs",
+        "require": "./dist/node/index.cjs"
+      },
+      "import": "./dist/universal/index.mjs",
+      "require": "./dist/universal/index.cjs",
+      "default": "./dist/universal/index.mjs"
+    },
+    "./edge": {
+      "import": "./dist/edge/index.mjs",
+      "default": "./dist/edge/index.mjs"
+    },
+    "./package.json": "./package.json"
   },
   "homepage": "https://runner.bluelibs.com",
   "repository": {
@@ -82,6 +96,7 @@
     "ts-jest": "^29.0.0",
     "tsup": "^8.0.0",
     "typedoc": "^0.26.7",
+    "@types/busboy": "^1.5.4",
     "typedoc-material-theme": "^1.1.0",
     "typedoc-plugin-pages": "^1.1.0",
     "typescript": "^5.6.2",
@@ -99,6 +114,11 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "lru-cache": "^11.1.0"
+  "lru-cache": "^11.1.0",
+  "fastify": "^5.1.0",
+  "@fastify/multipart": "^9.0.0"
+  },
+  "optionalDependencies": {
+    "busboy": "^1.6.0"
   }
 }
