--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,12 +14,13 @@
     "strict": true,
     "strictNullChecks": true,
     "noImplicitThis": false,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "baseUrl": "./src",
+    "paths": {
+      "#/*": ["src/*"]
+    }
   },
 
-  "include": [
-    "src/**/*.ts",
-    "examples/aws-lambda-quickstart/aws-lambda-quickstart.test.ts"
-  ],
+  "include": ["src/**/*.ts"],
   "exclude": ["examples/**", "web/**"]
 }
