--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,21 +1,12 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "target": "ES2020",
+    // Build-specific overrides
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "strict": true,
-    "skipLibCheck": true,
-    "declaration": true,
     "emitDeclarationOnly": false,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "sourceMap": true,
     "outDir": "dist",
-    "types": ["node"],
-    "baseUrl": ".",
-    "paths": {
-      "@bluelibs/runner/platform": ["src/platform/index.ts"]
-    }
+    "types": ["node"]
   },
   "include": ["src"],
   "exclude": ["examples/**", "src/__tests__/**"]
