--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bluelibs/runner",
-  "version": "4.6.0",
+  "version": "4.6.1",
   "description": "BlueLibs Runner",
   "sideEffects": false,
   "main": "dist/universal/index.cjs",
@@ -75,6 +75,7 @@
   },
   "devDependencies": {
     "@types/benchmark": "^2.1.5",
+    "@types/busboy": "^1.5.4",
     "@types/express": "^5.0.3",
     "@types/graphql": "^0.11.3",
     "@types/jest": "^27.0.0",
@@ -96,7 +97,6 @@
     "ts-jest": "^29.0.0",
     "tsup": "^8.0.0",
     "typedoc": "^0.26.7",
-    "@types/busboy": "^1.5.4",
     "typedoc-material-theme": "^1.1.0",
     "typedoc-plugin-pages": "^1.1.0",
     "typescript": "^5.6.2",
@@ -114,9 +114,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "lru-cache": "^11.1.0",
-    "fastify": "^5.1.0",
-    "@fastify/multipart": "^9.0.0"
+    "lru-cache": "^11.1.0"
   },
   "optionalDependencies": {
     "busboy": "^1.6.0"
