feat: enhance Node support and improve tunnel middleware functionality
- Added a dedicated Node subpath entry in package.json for better type and module resolution.
- Updated tsup.config.ts to include type generation for the Node subpath and improved entry definitions.
- Enhanced tunnel middleware to better handle local task tunneling and event emissions.
- Improved type definitions for tunnel resources and middleware to ensure type safety.
- Updated tests to reflect changes in event routing and middleware behavior, ensuring 100% coverage.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
       "require": "./dist/universal/index.cjs",
       "default": "./dist/universal/index.mjs"
     },
+    "./node": {
+      "types": "./dist/node/node.d.ts",
+      "import": "./dist/node/node.mjs",
+      "require": "./dist/node/node.cjs",
+      "default": "./dist/node/node.mjs"
+    },
     "./edge": {
       "import": "./dist/edge/index.mjs",
       "default": "./dist/edge/index.mjs"
