--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "benchmark:compare": "node ./scripts/compare-benchmarks.mjs ./baseline.json ./benchmark-results.json ./benchmarks.config.json"
   },
   "devDependencies": {
+    "@bluelibs/ejson": "^1.3.5",
     "@types/benchmark": "^2.1.5",
     "@types/busboy": "^1.5.4",
     "@types/express": "^5.0.3",
@@ -89,6 +90,7 @@
     "@typescript-eslint/eslint-plugin": "8.39.0",
     "@typescript-eslint/parser": "8.39.0",
     "benchmark": "^2.1.4",
+    "busboy": "^1.6.0",
     "eslint": "^9.32.0",
     "eslint-config-prettier": "6.3.0",
     "eslint-plugin-prettier": "3.1.1",
