feat: update documentation and dependencies
- Added a new guideline in AGENTS.md to avoid prompting users for actions they would likely want to take.
- Updated package dependencies, specifically upgrading @bluelibs/ejson from version 1.4.0 to 1.5.0.
- Enhanced README.md with improved formatting for better readability.
- Modified tsconfig files to allow importing TypeScript extensions and refined test exclusions for better coverage management.
- Improved type safety and consistency in resource and task builders, ensuring better adherence to type strictness across the codebase.
- Removed outdated integration tests for tunnels to streamline the testing suite.

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -4,10 +4,16 @@
     // Build-specific overrides
     "module": "ESNext",
     "moduleResolution": "Bundler",
+    "allowImportingTsExtensions": true,
     "emitDeclarationOnly": false,
     "outDir": "dist",
     "types": ["node"]
   },
   "include": ["src"],
-  "exclude": ["examples/**", "src/__tests__/**"]
+  "exclude": [
+    "examples/**",
+    "src/__tests__/**",
+    "src/**/__tests__/**",
+    "src/**/*.test.ts"
+  ]
 }
