feat: enhance package configuration and add new example for JWT authentication
- Updated package.json to include type definitions and improved module exports for Node.js, ensuring better compatibility and type safety.
- Introduced tsconfig.declarations.json for managing TypeScript declaration files, enhancing the build process.
- Modified build scripts to streamline the TypeScript compilation and bundling process.
- Added a new JWT authentication example under examples/tunnels/jwt-auth-example, complete with README and TypeScript configuration, demonstrating the use of Runner tunnels with JWT.
- Improved overall documentation in MULTI_PLATFORM.md and TUNNELS.md to reflect recent changes and provide clearer guidance on usage.
- Enhanced test coverage for new features and examples, ensuring robust functionality and adherence to type strictness.

--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
         "default": "./dist/browser/index.mjs"
       },
       "node": {
-        "import": "./dist/node/index.mjs",
-        "require": "./dist/node/index.cjs"
+        "types": "./dist/node/node.d.ts",
+        "import": "./dist/node/node.mjs",
+        "require": "./dist/node/node.cjs"
       },
       "import": "./dist/universal/index.mjs",
       "require": "./dist/universal/index.cjs",
@@ -33,6 +34,19 @@
       "default": "./dist/edge/index.mjs"
     },
     "./package.json": "./package.json"
+  },
+  "typesVersions": {
+    "*": {
+      "node": [
+        "dist/node/node.d.ts"
+      ],
+      "node/*": [
+        "dist/node/*.d.ts"
+      ],
+      "*": [
+        "dist/index.d.ts"
+      ]
+    }
   },
   "homepage": "https://runner.bluelibs.com",
   "repository": {
@@ -63,7 +77,7 @@
     "node": ">=18"
   },
   "scripts": {
-    "build": "tsup --config tsup.config.ts --sourcemap",
+    "build": "tsc -p tsconfig.declarations.json && tsup --config tsup.config.ts --sourcemap",
     "clean": "rm -rf dist",
     "watch": "tsup --config tsup.config.ts --watch",
     "test": "jest --verbose --runInBand",
@@ -117,6 +131,10 @@
   },
   "files": [
     "dist",
+    "node.js",
+    "node.d.ts",
+    "index.d.ts",
+    "node",
     "README.md",
     "AI.md",
     "LICENSE.md"
