--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bluelibs/runner",
-  "version": "4.7.0-alpha",
+  "version": "4.7.0",
   "description": "BlueLibs Runner",
   "sideEffects": false,
   "main": "dist/universal/index.cjs",
