--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "sideEffects": false,
   "main": "dist/universal/index.cjs",
   "module": "dist/universal/index.mjs",
-  "types": "dist/index.d.ts",
+  "types": "dist/universal/index.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
+      "types": "./dist/universal/index.d.ts",
       "browser": {
         "import": "./dist/browser/index.mjs",
         "require": "./dist/browser/index.cjs",
@@ -77,7 +77,7 @@
     "node": ">=18"
   },
   "scripts": {
-    "build": "tsc -p tsconfig.declarations.json && tsup --config tsup.config.ts --sourcemap",
+    "build": "tsup --config tsup.config.ts --sourcemap",
     "clean": "rm -rf dist",
     "watch": "tsup --config tsup.config.ts --watch",
     "test": "jest --verbose --runInBand",
@@ -125,7 +125,7 @@
     "typescript": "^5.6.2",
     "zod": "^4.0.17"
   },
-  "typings": "dist/index.d.ts",
+  "typings": "dist/universal/index.d.ts",
   "typescript": {
     "definition": "dist/index.d.ts"
   },
