--- a/examples/express-openapi-sqlite/package.json
+++ b/examples/express-openapi-sqlite/package.json
@@ -7,12 +7,12 @@
     "start": "ts-node src/index.ts",
     "dev": "NODE_ENV='development' ts-node-dev --respawn src/index.ts",
     "build": "tsc",
-    "test": "PORT=3788 jest",
+    "test": "jest",
     "test:watch": "jest --watch",
     "mcp": "runner-dev mcp"
   },
   "dependencies": {
-    "@bluelibs/runner": "file:../..",
+    "@bluelibs/runner": "^4.8.6",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dedupe": "^4.0.3",
