--- a/examples/express-openapi-sqlite/tsconfig.json
+++ b/examples/express-openapi-sqlite/tsconfig.json
@@ -15,5 +15,5 @@
     "emitDecoratorMetadata": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts"]
+  "exclude": ["node_modules", "dist"]
 }
