--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "benchmark": "jest --config jest.bench.config.js --verbose --runInBand",
     "benchmark:json": "BENCHMARK_OUTPUT=./benchmark-results.json NODE_OPTIONS=--expose-gc npm run benchmark",
     "benchmark:compare": "node ./scripts/compare-benchmarks.mjs ./baseline.json ./benchmark-results.json ./benchmarks.config.json",
-    "compose:readme": "node ./scripts/compose-readme.mjs"
+    "guide:compose": "node ./scripts/compose-readme.mjs"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.7",
