Refactor execution status handling and improve timeline component
- Updated Timeline component to use ExecutionStatus enum for status management.
- Enhanced StatusIcon to reflect new execution statuses including Cancelled.
- Modified Dashboard and ExecutionDetail pages to utilize ExecutionStatus for filtering and displaying execution data.
- Implemented idempotency key handling in MemoryStore and RedisStore for execution tracking.
- Cleaned up imports and formatting across various components for consistency.
- Adjusted Schedules component to use consistent import style.

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
   "scripts": {
     "build": "tsup --config tsup.config.ts --sourcemap",
     "build:dashboard": "node ./scripts/build-dashboard.mjs",
+    "build:dashboard:ci": "node ./scripts/build-dashboard.mjs --install",
     "clean": "rm -rf dist",
     "watch": "tsup --config tsup.config.ts --watch",
     "test": "node ./scripts/run-jest-watchdog.mjs -- --maxWorkers=50% --verbose=false",
