feat: Integrate and document durable workflow integration tests with real Redis and RabbitMQ backends into the main CI pipeline.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,15 @@ jobs:
   build-and-test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    services:
+      redis:
+        image: redis:7-alpine
+        ports:
+          - 6379:6379
+      rabbitmq:
+        image: rabbitmq:3-management-alpine
+        ports:
+          - 5672:5672
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -47,6 +56,11 @@ jobs:
 
       # Run tests with enforced 100% coverage
       - name: Run tests with coverage enforcement
+        env:
+          # Enables the durable "real backends" integration suite (Redis + RabbitMQ).
+          DURABLE_INTEGRATION: "1"
+          DURABLE_TEST_REDIS_URL: "redis://127.0.0.1:6379"
+          DURABLE_TEST_RABBIT_URL: "amqp://127.0.0.1:5672"
         run: npm run test:ci
 
       # Generate documentation (only on main branch)
@@ -84,34 +98,3 @@ jobs:
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         id: deployment
         uses: actions/deploy-pages@v4
-
-  durable-integration:
-    runs-on: ubuntu-latest
-    services:
-      redis:
-        image: redis:7-alpine
-        ports:
-          - 6379:6379
-      rabbitmq:
-        image: rabbitmq:3-management-alpine
-        ports:
-          - 5672:5672
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "20"
-          cache: "npm"
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run durable real-backend suite
-        env:
-          DURABLE_INTEGRATION: "1"
-          DURABLE_TEST_REDIS_URL: "redis://127.0.0.1:6379"
-          DURABLE_TEST_RABBIT_URL: "amqp://127.0.0.1:5672"
-        run: npm test -- --runTestsByPath src/node/durable/__tests__/DurableService.realBackends.integration.test.ts
